add semantic placeholders for hea der, main and footer

--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
       href="assets/favicon/favicon-16x16.png"
     />
   </head>
-  <body></body>
+     <body>
+        <!--Placeholder for header-->
+        <h1>Header</h1>
+        <!--Placeholder for Main content-->
+        <P>Main Content</P>
+        <!--Placeholder for Footer-->
+        <footer>Footer</footer>
+    
+
+  </body>
 </html>
