update code to follow with LLMS for semantic placeholders

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     />
   </head>
      <body>
-        <!--Placeholder for header-->
-        <h1>Header</h1>
-        <!--Placeholder for Main content-->
-        <P>Main Content</P>
-        <!--Placeholder for Footer-->
+        <!--Header-->
+        <header>Header</header>
+        <!--Main content-->
+        <main>Main Content</main>
+        <!--Footer-->
         <footer>Footer</footer>
     
 
