add background color to head, main and footer. remove browser default styles

--- a/index.html
+++ b/index.html
@@ -25,17 +25,20 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
+      href="assets/favicon/favicon-16x16.png">
+
+     <!-- Stylesheet -->
+     <link rel="stylesheet" href="assets/css/style.css" />
+
   </head>
      <body>
-        <!--Header-->
+        <!-- Header -->
         <header>Header</header>
 
-        <!--Main content-->
+        <!-- Main content -->
         <main>Main Content</main>
-        
-        <!--Footer-->
+
+        <!-- Footer -->
         <footer>Footer</footer>
     
 
