add google fonts

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
      <body>
         <!-- Header -->
         <header>Header</header>
+        <h1>Font test</h1>
 
         <!-- Main content -->
         <main>Main Content</main>
