Add font awesome and first footer link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 
             <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
             <label for="nav-toggle" class="nav-toggle-label">X</label>
-                <span></span>
             <nav>
                 <ul id="menu">
                     <li><a href="" class="active">Home</a></li>
@@ -56,8 +55,18 @@
         <main>Main Content</main>
 
         <!-- Footer -->
-        <footer>Footer</footer>
-    
+        <footer>
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.twitter.com">Twitter</a></li>
+                <li><a href="https://www.instagram.com">Instagram</a></li>
+                <li><a href="https://www.youtube.com">Youtube</a></li>
 
+            </ul>
+
+        </footer>
+        
+            <!-- Font Awesome Kit -->
+            <script src="https://kit.fontawesome.com/5ca234e80d.js" crossorigin="anonymous"></script>
   </body>
 </html>
