Add remaining links to footer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Meta tags for search engine-->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin Docklands and Phoenix Park />
-    <meta name="keywords" content="love running, run, running club, Ireland, Dublin, sports, exercise"/>
+    <meta name="description" content="Love Running. Club for runners in Dublin,
+    Ireland. Urban running, trail running. Dublin Docklands and Phoenix Park />
+    <meta
+      name="keywords"
+      content="love running, run, running club, Ireland, Dublin, sports, exercise"
+    />
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
@@ -25,48 +29,77 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png">
+      href="assets/favicon/favicon-16x16.png"
+    />
 
-     <!-- Stylesheet -->
-     <link rel="stylesheet" href="assets/css/style.css" />
-
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-     <body>
-        <!-- Header -->
-        <header>
-            <a href="index.html">
-                <h1 id="logo">Love Running</h1>
-            </a>
+  <body>
+    <!-- Header -->
+    <header>
+      <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+      </a>
 
-            <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
-            <label for="nav-toggle" class="nav-toggle-label">X</label>
-            <nav>
-                <ul id="menu">
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Sign Up</a></li>
-                </ul>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <nav>
+        <ul id="menu">
+          <li><a href="" class="active">Home</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Sign Up</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <!-- Main content -->
+    <main>Main Content</main>
 
-            </nav>
-        </header>
-        
-        <!-- Main content -->
-        <main>Main Content</main>
+    <!-- Footer -->
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in new tab)"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
 
-        <!-- Footer -->
-        <footer>
-            <ul>
-                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.twitter.com">Twitter</a></li>
-                <li><a href="https://www.instagram.com">Instagram</a></li>
-                <li><a href="https://www.youtube.com">Youtube</a></li>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Twitter page (opens in new tab)"
+            ><i class="fa-brands fa-twitter"></i></i
+          ></a>
 
-            </ul>
+          <a
+            href="https://www.Instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in new tab)"
+            ><i class="fa-brands fa-instagram"></i></i
+          ></a>
 
-        </footer>
-        
-            <!-- Font Awesome Kit -->
-            <script src="https://kit.fontawesome.com/5ca234e80d.js" crossorigin="anonymous"></script>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in new tab)"
+            ><i class="fa-brands fa-youtube"></i></i
+          ></a>
+        </li>
+
+      </ul>
+    </footer>
+
+    <!-- Font Awesome Kit -->
+    <script
+      src="https://kit.fontawesome.com/5ca234e80d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
