Add remaining links to footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- Footer -->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://www.facebook.com/"
@@ -67,7 +67,8 @@
             aria-label="Visit our Facebook page (opens in new tab)"
             ><i class="fa-brands fa-facebook"></i
           ></a>
-
+        </li>
+        <li>
           <a
             href="https://www.twitter.com/"
             target="_blank"
@@ -75,7 +76,8 @@
             aria-label="Visit our Twitter page (opens in new tab)"
             ><i class="fa-brands fa-twitter"></i></i
           ></a>
-
+        </li>
+        <li>
           <a
             href="https://www.Instagram.com/"
             target="_blank"
@@ -83,7 +85,8 @@
             aria-label="Visit our Facebook page (opens in new tab)"
             ><i class="fa-brands fa-instagram"></i></i
           ></a>
-
+        </li>
+        <li>
           <a
             href="https://www.youtube.com/"
             target="_blank"
