--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
   </head>
   <body>
     <!-- Header -->
