--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </div>
         </section>
 
+        <!-- Reasons section -->
         <section id="reasons">
             <h2>Why Love Running With Us?</h2>
                 <div id="benefits">
