--- a/index.html
+++ b/index.html
@@ -100,6 +100,47 @@
                 </div>            
 
         </section>
+
+        <!-- Meetup times section -->
+         <section id="meetups">
+            <h2>Meet-up Times</h2>
+          
+                <div class="time">
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Monday</p> 
+                    <p>5k</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div class="time">
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Wednesday</p>
+                    <p>10k</p>
+                    <p>The Phoenix Park</p>
+                    <p>18:30</p>
+                </div>
+                <div class="time">
+                    <h3>Urban <i class="fa-solid fa-city"></i></h3>
+                    <p>Friday</p>
+                    <p>5k</p>
+                    <p>The Marker Hotel</p>
+                    <p>18:30</p>
+                </div>
+                <div class="time">
+                    <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+                    <p>Saturday</p>
+                    <p>10k</p>
+                    <p>The Phoenix Park</p>
+                    <p>9:30</p>
+                </div>
+                <div class="time">
+                    <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+                    <p>Sunday</p>
+                    <p>OK</p>
+                    <p>The MArker Hotel</p>
+                    <p>11:30</p>
+                </div>
+         </section>
     </main>
 
     <!-- Footer -->
