--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <!-- Meetup times section -->
          <section id="meetups">
-            <h2>Meet-up Times</h2>
+            <h2 class="hidden-heading">Meet-up Times</h2>
           
             <div id="times">
                 <div>
