correct type in form dump link

--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@
     <!-- Main content -->
     <main>
         <section id="signup">
-            <form id="signup-form" method="POST" action="https://formdump.codeinstitue.net">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
                 <h2><i class="fa-solid fa-heart-pulse"></i> LET'S GET YOU SIGNED UP!</h2>
                 <label for="first-name">First Name:</label>
                 <input class="text-input" type="text" id="first-name" name="first-name" required />
