--- a/gallery.html
+++ b/gallery.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for search engine-->
     <meta name="description" content="Love Running. Club for runners in Dublin,
-    Ireland. Urban running, trail running. Dublin Docklands and Phoenix Park />
+    Ireland. Urban running, trail running. Dublin Docklands and Phoenix Park">
     <meta
       name="keywords"
       content="love running, run, running club, Ireland, Dublin, sports, exercise"
-    />
+    >
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
@@ -18,22 +18,22 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="assets/favicon/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
-    />
+    >
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <!-- Header -->
@@ -42,7 +42,7 @@
         <h1 id="logo">Love Running</h1>
       </a>
 
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <input type="checkbox" id="nav-toggle" name="nav-toggle">
       <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="menu">
@@ -57,6 +57,7 @@
     <main>
         
         <section id="gallery">
+            <h2 class="hidden-heading">Gallery</h2>
             <div id="photos">
                 <img src="assets/images/athletes.webp" alt="Two athletes running together">
                 <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
@@ -88,7 +89,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Twitter page (opens in new tab)"
-            ><i class="fa-brands fa-twitter"></i></i
+            ><i class="fa-brands fa-twitter"></i
           ></a>
         </li>
         <li>
@@ -97,7 +98,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in new tab)"
-            ><i class="fa-brands fa-instagram"></i></i
+            ><i class="fa-brands fa-instagram"></i
           ></a>
         </li>
         <li>
@@ -106,7 +107,7 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in new tab)"
-            ><i class="fa-brands fa-youtube"></i></i
+            ><i class="fa-brands fa-youtube"></i
           ></a>
         </li>
 
